fix align "about" navbar, space between line in description

--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -21,6 +21,7 @@ body {
     list-style-type: none;
     display: flex;
     line-height: 5;
+    white-space: nowrap;
 }
 
 .pic-navbar {
@@ -80,6 +81,7 @@ ul li a:hover {
 
 .description p {
     text-align: center;
+    font-size: 2rem;
 }
 
 
